...
                    }
                }
            }
    }
    HorizontalPager(
        state = pager,
        modifier = modifier.fillMaxSize().testTag("reader_pager").bookGestureHandler(
            true,
            onBookTap,
            onNavigationDragStarted,
            onGestureFinished,
        ),
        flingBehavior = PagerDefaults.flingBehavior(pager, pagerSnapDistance = PagerSnapDistance.atMost(1)),
...
